# barber2go

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
migrations/: 0001_init.sql  0002_push_and_geo.sql
src/: auth.rs  db.rs  filters.rs  main.rs  models.rs  push.rs  state.rs  templates.rs
src/routes/: admin.rs  barber.rs  events.rs  mod.rs  public.rs
static/: manifest.webmanifest  sw.js
static/css/: admin.css  app.css
static/js/: admin.js  app.js  book.js  cms.js  status.js
templates/: admin_appointment_detail.html  admin_appointments.html  admin_barber_stats.html  admin_barbers.html  admin_base.html  admin_cms.html  admin_dashboard.html  barber_appointments.html  barber_dashboard.html  barbers.html  base.html  book.html  book_success.html  home.html  status.html
