[package]
name = "barber2go"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
actix-web-httpauth = "0.8.2"
argon2 = "0.5.3"
askama = "0.15.1"
askama_web = { version = "0.15.0", features = ["actix-web-4"] }
chrono = { version = "0.4.43", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.28"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
tokio = { version = "1.49.0", features = ["rt", "macros", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
web-push = "0.10.2"
